Fixed alignment of header elements

--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -46,4 +46,5 @@ ul {
 li {
   display: inline;
   padding-left: 1vw;
+  vertical-align: middle;
 }
